clusters/production/backup/allow-backup-to-postgres.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backup-to-postgres
  namespace: authentik
spec:
  podSelector:
    matchLabels:
      app: postgres
      component: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backup
    ports:
    - protocol: TCP
      port: 5432
